Fix img location in notice on smaller screens

--- a/sass/responsive.smalltouch.portrait.scss
+++ b/sass/responsive.smalltouch.portrait.scss
@@ -107,15 +107,16 @@ body.front {
   div.site-notice {
     font-size: 90%;
     img {
-      float: left;
+      display: inline;
+      position: relative;
+      top: 5px;
       margin-right: 10px;
-      margin-top: 12px;
     }
     ul {
-      margin: 0.5em 0;
+      margin: 0.2em 0;
     }
-    div.site-notice-text {
-      float: left;
+    div {
+      display: inline;      
     }
     div.site-notice-text-primary {
       font-weight: 500;
